<resources>
    <string name="app_name">Speedometer</string>
    <string name="setttings">设置</string>
    <string name="top_speed">最高车速</string>
    <string name="avg_speed">平均车速</string>
    <string name="distance">距离</string>
    <string name="search">搜索</string>
    <string name="gps_settings">GPS设置</string>
    <string name="permission_settings">应用权限设置</string>
    <string name="import_data">导入数据</string>
    <string name="export_all_data">导出所有数据</string>
    <string name="about">关于</string>
    <string name="need_gps_perms">需要允许GPS来侦测速度</string>
    <string name="gps_disabled">GPS已禁用</string>
    <string name="ride_unsaved">GPS已禁用，轨迹未保存</string>
    <string name="saved_ok">保存成功</string>
    <string name="saved_failed">保存失败</string>
    <string name="go">GO</string>
    <string name="ride_data">骑行数据</string>
    <string name="back">返回</string>
    <string name="data_load_failed">数据加载失败</string>
    <string name="ride_list">骑行列表</string>
    <string name="confirm_delete">确定删除</string>
    <string name="confirm_delete_2">条记录吗？</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="app_info">应用信息</string>
    <string name="copyright">wqis 版权所有 2022</string>
    <string name="package_info_error">包信息错误</string>
    <string name="choose_import_file">选择要导入的文件</string>
    <string name="cannot_find_file_manager">找不到文件管理器</string>
    <string name="need_file_perms">需要允许读取外部储存来导入数据</string>
    <string name="file_import_ok">文件导入成功</string>
    <string name="file_import_failed">文件导入失败</string>
    <string name="no_data_folder">没有数据文件夹</string>
    <string name="no_data">没有数据</string>
    <string name="exporting">导出中</string>
</resources>