<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <android.support.v7.widget.CardView
          android:foreground="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/operator_mode_card"
          android:layout_width="match_parent"
          android:padding="20dp"
          android:layout_height="match_parent">

          <LinearLayout
              android:layout_marginLeft="20dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

              <ImageView
                  android:id="@+id/operator_mode_icon_iv"
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:src="@drawable/icon_motorcycle"/>

              <TextView
                  android:id="@+id/operator_mode_title_tv"
                  android:layout_margin="20dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="22dp"
                  android:text="电单车模式"/>

          </LinearLayout>

      </android.support.v7.widget.CardView>

      <View
          android:layout_width="wrap_content"
          android:layout_height="0.5dp"
          android:background="@color/light_gray"/>



      <android.support.v7.widget.CardView
          android:foreground="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/gps_settings_card"
          android:layout_width="match_parent"
          android:padding="20dp"
          android:layout_height="match_parent">

          <LinearLayout
              android:layout_marginLeft="20dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal">

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:src="@drawable/icon_gps"/>

              <TextView
                  android:layout_margin="20dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="22dp"
                  android:text="@string/gps_settings"/>

          </LinearLayout>

      </android.support.v7.widget.CardView>

      <View
          android:layout_width="wrap_content"
          android:layout_height="0.5dp"
          android:background="@color/light_gray"/>

      <android.support.v7.widget.CardView
          android:foreground="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/permissions_card"
          android:layout_width="match_parent"
          android:padding="20dp"

          android:layout_height="match_parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="20dp">

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:src="@drawable/icon_permission"/>

              <TextView
                  android:layout_margin="20dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="22dp"
                  android:text="@string/permission_settings"/>

          </LinearLayout>



      </android.support.v7.widget.CardView>

      <View
          android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:background="@color/light_gray"/>

      <android.support.v7.widget.CardView
          android:foreground="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/import_data_card"
          android:layout_width="match_parent"
          android:padding="20dp"
          android:elevation="0dp"
          android:layout_height="match_parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="20dp">

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:src="@drawable/icon_import"/>

              <TextView
                  android:layout_margin="20dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="22dp"
                  android:text="@string/import_data"/>
          </LinearLayout>

      </android.support.v7.widget.CardView>

      <View
          android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:background="@color/light_gray"/>

      <android.support.v7.widget.CardView
          android:foreground="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/export_data_card"
          android:layout_width="match_parent"
          android:padding="20dp"
          android:elevation="0dp"
          android:layout_height="match_parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="20dp">

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:src="@drawable/icon_export"/>

              <TextView
                  android:layout_margin="20dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="22dp"
                  android:text="@string/export_all_data"/>

          </LinearLayout>



      </android.support.v7.widget.CardView>

      <View
          android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:background="@color/light_gray"/>

      <android.support.v7.widget.CardView
          android:foreground="?android:attr/selectableItemBackground"
          android:clickable="true"
          android:id="@+id/about_card"
          android:layout_width="match_parent"
          android:padding="20dp"
          android:elevation="0dp"
          android:layout_height="match_parent">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="20dp">

              <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:src="@drawable/icon_about"/>

              <TextView
                  android:layout_margin="20dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="22dp"
                  android:text="@string/about"/>

          </LinearLayout>
      </android.support.v7.widget.CardView>

  </LinearLayout>

</LinearLayout>