<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rideRootView"
    android:orientation="vertical"
    tools:context=".RideActivity">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true" />

    <android.support.v7.widget.CardView
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="0dp"
        app:cardCornerRadius="0dp"
        android:backgroundTint="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="--"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:layout_gravity="center"
                    android:id="@+id/TVMaxSpeed"
                    android:textStyle="italic"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="--"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:id="@+id/TVAvgSpeed"
                    android:textStyle="italic"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/TVDistance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="--"
                    android:textStyle="italic"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textSize="30sp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1.5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="KM/H"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:alpha="0.7"
                    android:textColor="@color/black"  />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="KM/H"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:alpha="0.7"
                    android:textSize="12sp"
                    android:drawableTint="@color/white"
                    android:textColor="@color/black"  />

                <TextView
                    android:id="@+id/lengthUnitTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="KM"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:textSize="12sp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/top_speed"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    android:alpha="0.7"
                    android:layout_gravity="center"
                    android:textColor="@color/black"  />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/avg_speed"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:alpha="0.7"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"  />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/distance"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:textSize="14sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black" />

            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>